--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -1,6 +1,6 @@
 # db config
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/blog?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+spring.datasource.url=jdbc:mysql://localhost:3306/personal?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
 spring.datasource.username=root
 spring.datasource.password=111111
 spring.datasource.initialSize=20
@@ -13,12 +13,12 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.check-template-location=true
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.encoding=UTF-8
-spring.thymeleaf.content-type=text/html
+spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.cache=false
 
 mybatis.mapper-locations=classpath:mapper/*.xml
-mybatis.type-aliases-package=com.my.blog.website.dao
+mybatis.type-aliases-package=com.my.ycz.dao
 
 server.port=8080
 
