--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -2,7 +2,7 @@
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/personal?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
 spring.datasource.username=root
-spring.datasource.password=111111
+spring.datasource.password=root
 spring.datasource.initialSize=20
 spring.datasource.minIdle=10
 spring.datasource.maxActive=100
@@ -20,7 +20,7 @@ spring.thymeleaf.cache=false
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.my.ycz.dao
 
-server.port=8080
+server.port=8081
 
 #pagehelper
 pagehelper.helperDialect=mysql
