--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -19,7 +19,7 @@ spring.thymeleaf.mode=HTML
 spring.thymeleaf.cache=false
 
 mybatis.mapper-locations=classpath:mapper/*.xml
-mybatis.type-aliases-package=com.my.ycz.dao
+mybatis.type-aliases-package=com.ycz.dao
 
 server.port=8081
 
