--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
 			<version>3.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.11</version>
+		</dependency>
+
 		<!--mybatis分页插件-->
 		<dependency>
 			<groupId>com.github.pagehelper</groupId>
@@ -71,6 +77,11 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
 			<version>1.0.18</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 	</dependencies>
 
