登录页js引用失败.

--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -28,3 +28,6 @@ pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.support-methods-arguments=true
 pagehelper.params=count=countSql
+
+#打印sql到控制台
+logging.level.com.ycz.dao=debug
