--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.ycz</groupId>
-	<artifactId>blog</artifactId>
+	<artifactId>person_manage</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>blog</name>
+	<name>person_manage</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
