--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -1,7 +1,7 @@
 # db config
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/person?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+spring.datasource.url=jdbc:mysql://192.168.23.131:3306/person?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.initialSize=20
